--- a/views/home.html
+++ b/views/home.html
@@ -14,7 +14,7 @@
 
 	<link rel="canonical" href="https://demo-basic.adminkit.io/" />
 
-	<title>Website Apis - Revi Ganzㄙ</title>
+	<title>Website Apis - Revi Ganzã„™</title>
 	
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
@@ -139,12 +139,12 @@ nav {
 style="color:green"
      class="txt-rotate"
      data-period="4000"
-     data-rotate='[ "🔥WEBSITE API PINDAH🔥", "PINDAH KE.", "LIHAT DI BAWAH.", "GW BILANG PINDAH.", "KAGA BISA BACA YA?." ]'></span>
+     data-rotate='[ "WEBSITE API PINDAH", "PINDAH KE.", "LIHAT DI BAWAH.", "GW BILANG PINDAH.", "KAGA BISA BACA YA?." ]'></span>
       </h5>
       <hr size="5">
 </div>
 <h5 style="color:white" data-aos="fade-up">
-    Pindah <a class="anu" href="https://revi-api.herokuapp.com">Kesini.</a>
+    Pindah <a class="anu" href="https://reviapiyt-api.herokuapp.com">Kesini.</a>
 
     <div class="logo">
 <a style="color:white"href="https://wa.me/6287772961550">
